salesforce-port/force-app/main/default/objects/Card__c/Card__c.object-meta.xml
<CustomObject>
    <label>Card</label>
    <nameField>
        <displayFormat>CARD-{000000}</displayFormat>
        <label>Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>