salesforce-port/force-app/main/default/objects/Card__c/fields/Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Name__c</fullName>
    <label>Card Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>