salesforce-port/force-app/main/default/objects/Card__c/fields/Cardholder__c.field-meta.xml
<CustomField>
    <fullName>Cardholder__c</fullName>
    <label>Cardholder</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
</CustomField>