salesforce-port/force-app/main/default/objects/Card__c/fields/Feed_Provider__c.field-meta.xml
<CustomField>
    <fullName>Feed_Provider__c</fullName>
    <label>Feed Provider</label>
    <type>Text</type>
    <length>255</length>
</CustomField>