salesforce-port/force-app/main/default/objects/Card__c/fields/Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Last_Four__c</fullName>
    <label>Last Four</label>
    <type>Text</type>
    <length>4</length>
</CustomField>